# cookiecutter-ml-scripts

./: .gitignore  README.md  prep.sh  pyproject.toml  test_cuda.py  train_flowers_102_efficientnetv2.py
image_tasks/: eval_flowers_102_efficientnetv2.py  flowers_hyperparameter_tuning.py  train_flowers_102_efficientnetv2.py
text_tasks/: imdb_hyperparameter_tuning.py  train_imdb_reviews.py
