[project]
name = "cookiecutter-ml-scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "mlflow>=2.18.0",
  "numpy>=2.1.3",
  "peft>=0.13.2",
  "pytorch-lightning>=2.4.0",
  "schedulefree>=1.3",
  "scikit-learn>=1.5.2",
  "timm>=1.0.11",
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "transformers>=4.46.3",
]
